--- a/src/assets/scss/components/buttons.scss
+++ b/src/assets/scss/components/buttons.scss
@@ -34,8 +34,7 @@
     &:visited,
     &:active,
     &:hover {
-      background-color: black;
-      // color: $light-color;
+      background-color: $primary-dark;
     }
   }
 }
