--- a/src/assets/scss/variables/colors.scss
+++ b/src/assets/scss/variables/colors.scss
@@ -25,4 +25,5 @@ $nav-gradient: linear-gradient(90deg, #fbb369, #ff814a);
 $overlay-color: rgba(0, 0, 0, 0.8);
 $primary-light: #fe673a;
 $primary: #00CCD1;
+$primary-dark: #0AA5A5;
 $shadow-color: rgba(0, 0, 0, 0.5);
