--- a/src/assets/scss/components/page-header.scss
+++ b/src/assets/scss/components/page-header.scss
@@ -3,7 +3,6 @@ $page-header-illustration: url('../../images/page-header-illustrations.png') cen
 .page-header {
   align-items: center;
   background: $page-header-illustration;
-  background-size: fixed;
   color: $dark-color;
   display: flex;
   padding: $xxl 0;
@@ -26,6 +25,21 @@ $page-header-illustration: url('../../images/page-header-illustrations.png') cen
 
     .container {
       padding: 0 24px;
+    }
+  }
+
+  &-hide-title {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
+      display: none;
+
+    }
+
+    .icons-control {
+      padding: $m 0;
     }
   }
 }
