--- a/src/assets/scss/components/icon-how-to.scss
+++ b/src/assets/scss/components/icon-how-to.scss
@@ -37,4 +37,25 @@
     right: 10px;
     top: 30px;
   }
+
+  @media (max-width: 430px) {
+    .container {
+      display: flex;
+      flex-direction: column;
+
+      .how-to-use-block-left {
+        margin: 0;
+
+        button.btn-primary {
+          margin: $m 0;
+        }
+      }
+
+      .input-group {
+        align-items: flex-start;
+        display: flex;
+        flex-direction: column;
+      }
+    }
+  }
 }
