--- a/src/assets/scss/components/icon-list.scss
+++ b/src/assets/scss/components/icon-list.scss
@@ -7,9 +7,8 @@
 
 
   h4 {
-    border-bottom: 1px solid $light-gray;
     color: $primary;
-    padding: $l $xl;
+    padding: $l $m;
     text-transform: capitalize;
     width: 90%;
 
@@ -63,7 +62,7 @@
     &-icons {
       display: flex;
       flex-wrap: wrap;
-      justify-content: flex-start;
+      justify-content: space-between;
     }
   }
 }
