Fixes and improvements: hideing paddings on subheader, icon position ...

--- a/src/assets/scss/components/modal.scss
+++ b/src/assets/scss/components/modal.scss
@@ -2,6 +2,7 @@
   background-color: $modal-background-color;
   display: flex;
   height: 100%;
+  left: 0;
   position: fixed;
   top: 0;
   width: 100%;
@@ -19,6 +20,11 @@
 
   .modal-content {
     padding: $l;
+
+    .container {
+      align-items: center;
+      flex-direction: column;
+    }
   }
 
   .modal-btn {
