use only our media query vars for responsiveness

--- a/src/assets/scss/base/flex.scss
+++ b/src/assets/scss/base/flex.scss
@@ -23,7 +23,7 @@
 }
 
 .flex-wrap-sm {
-  @media (max-width: 430px) {
+  @media (max-width: $mobile-max) {
 
     flex-wrap: wrap;
     justify-content: center;
