--- a/src/assets/scss/components/scroll-to-top.scss
+++ b/src/assets/scss/components/scroll-to-top.scss
@@ -23,7 +23,7 @@
     outline: none;
   }
 
-  @media screen and (max-width: 430px) {
+  @media screen and (max-width: $mobile-max) {
     bottom: 100px;
  }
 }
