--- a/src/assets/scss/components/cookies-banner.scss
+++ b/src/assets/scss/components/cookies-banner.scss
@@ -35,7 +35,7 @@
   display: none;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: $screen-max) {
   /* For tablets and mobile: */
   .cookies-alert {
     display: flex;
