--- a/src/assets/scss/components/customize-icons-panel.scss
+++ b/src/assets/scss/components/customize-icons-panel.scss
@@ -70,7 +70,7 @@
     }
   }
 
-  @media screen and (max-width: 650px) {
+  @media screen and (max-width: $mobile-max) {
     flex-direction: column;
   }
 }
