--- a/src/assets/scss/components/icon-how-to.scss
+++ b/src/assets/scss/components/icon-how-to.scss
@@ -38,7 +38,7 @@
     top: 30px;
   }
 
-  @media (max-width: 430px) {
+  @media (max-width: $mobile-max) {
     .container {
       display: flex;
       flex-direction: column;
