--- a/src/assets/scss/pages/home.scss
+++ b/src/assets/scss/pages/home.scss
@@ -46,7 +46,7 @@
     justify-content: flex-end;
   }
 
-  @media screen and (max-width: 430px) {
+  @media screen and (max-width: $mobile-max) {
     flex-direction: column;
 
     &-dynamic {
