--- a/src/assets/scss/pages/team.scss
+++ b/src/assets/scss/pages/team.scss
@@ -88,7 +88,7 @@ $font-size-20px: 20px;
         text-align: center;
       }
 
-      @media (max-width: 430px) {
+      @media (max-width: $mobile-max) {
         padding-left: 15%;
       }
     }
