--- a/src/assets/scss/variables/media-query.scss
+++ b/src/assets/scss/variables/media-query.scss
@@ -5,8 +5,5 @@
 *
 * $sd-min for Small Devices (mobile) and $md-min for Medium Devices (tablets)
 */
-$sd-min: 360px;
-$sd-max: 768px;
-$md-min: 770px;
-$md-max: 1336px;
-$custom-tablet: 999px;
+$mobile-max: 770px;
+$screen-max: 1336px;
