--- a/src/assets/scss/components/icon-how-to.scss
+++ b/src/assets/scss/components/icon-how-to.scss
@@ -2,8 +2,9 @@
   border-top: 1px solid $light-gray;
   bottom: 0;
   left: 0;
-  padding: $l 0;
-  padding-bottom: $m;
+  margin-top: $xl;
+  padding: $l 0 0;
+  // padding-bottom: $m;
   position: relative;
   width: 100%;
   z-index: $z-index-10;
