improvements in the UI of the How To component for mobile

--- a/src/assets/scss/components/icon-how-to.scss
+++ b/src/assets/scss/components/icon-how-to.scss
@@ -4,7 +4,6 @@
   left: 0;
   margin-top: $xl;
   padding: $l 0 0;
-  // padding-bottom: $m;
   position: relative;
   width: 100%;
   z-index: $z-index-10;
@@ -34,6 +33,7 @@
   }
 
   .close-button {
+    cursor: pointer;
     position: absolute;
     right: 10px;
     top: 30px;
@@ -45,17 +45,22 @@
       flex-direction: column;
 
       .how-to-use-block-left {
-        margin: 0;
+        margin: $s 0 0;
 
         button.btn-primary {
-          margin: $m 0;
+          margin: $s;
+        }
+
+        button.btn-primary:first-of-type {
+          margin-left: 0;
         }
       }
 
       .input-group {
         align-items: flex-start;
         display: flex;
-        flex-direction: column;
+        flex-wrap: wrap;
+        margin: 0;
       }
     }
   }
