--- a/src/assets/scss/components/icon-list.scss
+++ b/src/assets/scss/components/icon-list.scss
@@ -1,17 +1,31 @@
 .icons-list {
   @extend .flex;
   @extend .flex-wrap;
+  justify-content: space-around;
   margin-bottom: $xxxl;
-  width: fit-content;
 
   .icon-container {
     align-items: center;
+    border: 2px solid transparent;
     display: flex;
     flex-direction: column;
-    font-size: $font-size-body;
+    font-size: $small-font;
     font-weight: 300;
-    padding: $m;
-    width: 150px;
+    margin: $xs;
+    overflow: hidden;
+    padding: $s;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100px;
+
+    &.active {
+      border: 2px solid $primary;
+    }
+
+    &:hover {
+      border: 2px solid $primary;
+      cursor: pointer;
+    }
 
     .eos-icons,
     img {
@@ -21,15 +35,6 @@
       padding: 10px;
       text-align: center;
       width: 32px;
-
-      &:hover {
-        border: 2px solid $primary;
-        cursor: pointer;
-      }
-    }
-
-    .active {
-      border: 2px solid $primary;
     }
   }
 }
