--- a/src/assets/scss/components/page-header.scss
+++ b/src/assets/scss/components/page-header.scss
@@ -30,7 +30,7 @@ $page-header-illustration: url('../../images/page-header-illustrations.png') cen
     width: 100%;
 
     .container {
-      padding: 24px;
+      padding: $l;
     }
   }
 
