fix UI for mobile: nav and icon display, and titles

--- a/src/assets/scss/components/icon-list.scss
+++ b/src/assets/scss/components/icon-list.scss
@@ -18,6 +18,11 @@
     white-space: nowrap;
     width: 100px;
 
+    @media (max-width: $mobile-max) {
+      margin: $xs;
+      padding: $xs;
+    }
+
     &.active {
       border: 2px solid $primary;
     }
