--- a/src/assets/scss/components/page-header.scss
+++ b/src/assets/scss/components/page-header.scss
@@ -36,6 +36,10 @@ $page-header-illustration: url('../../images/page-header-illustrations.png') cen
 
   h1 {
     margin-bottom: $xl;
+
+    @media (max-width: $mobile-max) {
+      margin-bottom: $s;
+    }
   }
 
   &-hide-title {
