--- a/src/assets/scss/base/titles.scss
+++ b/src/assets/scss/base/titles.scss
@@ -34,6 +34,11 @@ h1 {
     position: absolute;
     width: 32%;
     z-index: -1;
+
+    @media (max-width: $mobile-max) {
+      border: 8px solid $primary;
+      margin-top: 10px;
+    }
   }
 }
 
