Fix UI for About UI in mobile

--- a/src/assets/scss/components/about-block.scss
+++ b/src/assets/scss/components/about-block.scss
@@ -6,6 +6,11 @@
   &-description {
     width: 50%;
 
+    @media (max-width: $mobile-max) {
+      margin-top: $xxl;
+      width: 100%;
+    }
+
     h2 {
       font-weight: bold;
       text-transform: uppercase;
