Fixes in the Docs page

--- a/src/assets/scss/components/footer.scss
+++ b/src/assets/scss/components/footer.scss
@@ -24,6 +24,12 @@ footer {
     display: flex;
     margin: $l;
 
+    @media (max-width: $mobile-max) {
+      display: inline;
+      margin: $s 0;
+      text-align: left;
+    }
+
     span {
       font-weight: bold;
     }
@@ -34,6 +40,12 @@ footer {
       flex-direction: column;
       margin: 0;
       padding: 0;
+
+      @media (max-width: $mobile-max) {
+        a {
+          margin: 0;
+        }
+      }
     }
   }
 
