Added dropdown for sizes

--- a/src/assets/scss/components/icon-editor.scss
+++ b/src/assets/scss/components/icon-editor.scss
@@ -147,6 +147,13 @@
 
 .size-selector {
   flex-direction: column;
+  padding-top: $l;
+
+  i {
+    position: absolute;
+    right: 55px;
+    z-index: -1;
+  }
 }
 
 .type-selector {
