--- a/src/assets/scss/components/navigation.scss
+++ b/src/assets/scss/components/navigation.scss
@@ -13,6 +13,10 @@ header {
     color: $light-color;
     display: flex;
 
+    @media (max-width: $mobile-max) {
+      margin-left: $m;
+    }
+
     .logo {
       margin-right: $m;
     }
