--- a/src/assets/scss/components/icon-list.scss
+++ b/src/assets/scss/components/icon-list.scss
@@ -34,7 +34,7 @@
 
     .eos-icons,
     img {
-      border: 2px solid $light-color;
+      border: 2px solid $white;
       height: 32px;
       margin: 10px;
       padding: 10px;
