--- a/src/assets/scss/components/page-header.scss
+++ b/src/assets/scss/components/page-header.scss
@@ -3,7 +3,7 @@ $page-header-illustration: url('../../images/page-header-illustrations.png') cen
 .page-header {
   align-items: center;
   background: $page-header-illustration;
-  color: $dark-color;
+  color: $black;
   display: flex;
   padding: $xxl 0;
   position: sticky;
