--- a/src/assets/scss/components/toggle.scss
+++ b/src/assets/scss/components/toggle.scss
@@ -23,7 +23,7 @@
   }
 
   &-button {
-    background: $light-color;
+    background: $white;
     border-radius: 45px;
     box-shadow: 0 0 2px 0 rgba(10, 10, 10, 0.29);
     content: '';
