--- a/src/assets/scss/layout/general.scss
+++ b/src/assets/scss/layout/general.scss
@@ -1,5 +1,5 @@
 body {
-  color: $dark-color;
+  color: $black;
   font-family: $font-family;
   font-size: $font-size;
   font-weight: $font-weight;
@@ -14,13 +14,6 @@ body {
   margin: auto;
   max-width: 1140px;
   padding: $xl;
-}
-
-.command {
-  background-color: #fbe5e1;
-  border-radius: 4px;
-  color: $command;
-  padding: 2px 4px;
 }
 
 .disabled {
