Fix: tidy colors a bit and add format and linter fix to pre-hook

--- a/src/assets/scss/variables/colors.scss
+++ b/src/assets/scss/variables/colors.scss
@@ -1,27 +1,25 @@
-/* Gradient */
+/* General colors */
 
 $black: #000000;
 $dark-black: #333;
-
 $dark-gray: #7E7F7F;
-
-$hyper-link-color: #008ACF;
-$hyper-link-hover-color: #15578f;
-
-$white: #fff;
-$light-gray: #EEEFF1;
-$light-overlay-gradient: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
-;
 $lighter-gray: #d0d0d0;
 $lightest-gray: #BFC0C1;
-$modal-background-color: rgba(0, 0, 0, 0.7);
+$white: #fff;
+$light-gray: #EEEFF1;
 
+// Hierarchy colors
+$primary: #00CCD1;
+$primary-dark: #0AA5A5;
+$secondary: $black;
+
+// Component specific colors
+$hyper-link-color: #008ACF;
+$hyper-link-hover-color: #15578f;
+$light-overlay-gradient: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
+;
+$modal-background-color: rgba(0, 0, 0, 0.7);
 $nav-gradient: linear-gradient(90deg, #fbb369, #ff814a);
 $overlay-color: rgba(0, 0, 0, 0.8);
 $primary-light: #fe673a;
-
-$primary: #00CCD1;
-$primary-dark: #0AA5A5;
-
-$secondary: $black;
 $shadow-color: rgba(0, 0, 0, 0.5);
