--- a/src/assets/scss/components/page-header.scss
+++ b/src/assets/scss/components/page-header.scss
@@ -8,6 +8,7 @@ $page-header-illustration: url('../../images/page-header-illustrations.png') cen
   padding: $xxl 0;
   position: sticky;
   top: 55px;
+  transition: all 0.3s ease-out;
   width: 100%;
   z-index: 10;
 
