--- a/src/assets/scss/components/icon-list.scss
+++ b/src/assets/scss/components/icon-list.scss
@@ -44,6 +44,12 @@
   }
 }
 
+.icons-search {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .total-icons {
   margin: 5px 0px 0px 40px;
 }
