Solved responsiveness issues in the docs section w/signoff
Signed-off-by: AnshumanDhiman <67755381+AnshumanDhiman@users.noreply.github.com>

--- a/src/assets/scss/pages/docs.scss
+++ b/src/assets/scss/pages/docs.scss
@@ -40,3 +40,12 @@
     }
   }
 }
+
+@media(max-width: 1024px) {
+  .resp-link-edit {
+   overflow:scroll;
+  }
+  .onyour-img-edit{
+    width: 100%;
+  }
+}
