--- a/src/assets/scss/components/select.scss
+++ b/src/assets/scss/components/select.scss
@@ -22,10 +22,11 @@ select {
   background: $eos-select-bg-active;
   background-color: transparent;
   background-size: $eos-select-bg-size;
-  border: 0;
-  border-radius: 0;
+  border: 1px solid $eos-form-element-color;
+  border-radius: 8px;
   color: $eos-select-txt-color;
   cursor: pointer;
+  font-family: $font-family;
   font-size: $eos-select-font;
   font-weight: 300;
   padding: $eos-select-padding;
@@ -37,7 +38,7 @@ select {
   }
 
   &:focus {
-    border-color: $eos-form-element-color;
+    border-color: $secondary;
     outline: 0;
   }
 
