Fixed: #41: Updated Suggested search text to have pointer cursor
Signed-off-by: chinmaym07 <b418020@iiit-bh.ac.in>

--- a/src/assets/scss/components/icon-list.scss
+++ b/src/assets/scss/components/icon-list.scss
@@ -54,6 +54,7 @@
   font-weight: normal;
 
   .suggested-search {
+    cursor: pointer;
     font-weight: bold;
     text-decoration-line: underline;
   }
