Updated changes required fixing responsiveness issues

--- a/src/assets/scss/pages/docs.scss
+++ b/src/assets/scss/pages/docs.scss
@@ -41,6 +41,13 @@
   }
 }
 
+@media (max-width: $mobile-max) {
+  .line-edit {
+    display: block;
+  }
+}
+
+
 @media (max-width: 1024px) {
   .resp-link-edit {
     overflow: scroll;
