Required Changes done added the changes requested

--- a/src/assets/scss/pages/docs.scss
+++ b/src/assets/scss/pages/docs.scss
@@ -39,7 +39,15 @@
       display: inline;
     }
   }
+
+  .download-button-edit {
+    @media (max-width: $mobile-max) {
+      display: none;
+    }
+  }
 }
+
+
 
 @media (max-width: 1024px) {
   .resp-link-edit {
