--- a/src/assets/scss/components/select.scss
+++ b/src/assets/scss/components/select.scss
@@ -28,9 +28,9 @@ select {
   cursor: pointer;
   font-family: $font-family;
   font-size: $eos-select-font;
-  font-weight: 300;
+  font-weight: 700;
   padding: $eos-select-padding;
-  text-shadow: 0.8px 0px $secondary;
+  text-transform: capitalize;
   width: 100%;
 
   option {
