--- a/src/assets/scss/base/prism-theme.scss
+++ b/src/assets/scss/base/prism-theme.scss
@@ -28,7 +28,7 @@ pre[class*="language-"] {
 	-moz-tab-size: 2;
 	-o-tab-size: 2;
 	tab-size: 2;
-
+	z-index: -1;
 	-webkit-hyphens: none;
 	-moz-hyphens: none;
 	-ms-hyphens: none;
