--- a/src/assets/scss/components/badge.scss
+++ b/src/assets/scss/components/badge.scss
@@ -1,5 +1,5 @@
 .badge {
-  background-color: $lightest-gray;
+  background-color: $dark-gray;
   border-radius: 100px;
   color: $white;
   display: inline-block;
