added label tag

--- a/src/assets/scss/pages/home.scss
+++ b/src/assets/scss/pages/home.scss
@@ -11,7 +11,13 @@
   padding: 0;
 }
 
+.search-input-label {
+  font-weight: bold;
+  margin-right: 10px;
+}
+
 .icons-control {
+  align-items: center;
   display: flex;
 
   &-search {
