Fixed spacing issues in Outlined and Filled icons

--- a/src/assets/scss/components/icon-list.scss
+++ b/src/assets/scss/components/icon-list.scss
@@ -41,6 +41,16 @@
       text-align: center;
       width: 32px;
     }
+
+    .eos-icons-outlined,
+    img {
+      border: 2px solid $white;
+      height: 32px;
+      margin: 10px;
+      padding: 10px;
+      text-align: center;
+      width: 32px;
+    }
   }
 }
 
