Refactored the 404 page and added a button to link back to the Homepage

--- a/src/assets/scss/pages/page-not-found.scss
+++ b/src/assets/scss/pages/page-not-found.scss
@@ -1,10 +1,5 @@
-.not-found {
-  font-weight: 100;
+.heading-not-found {
+  padding: 15% 0%;
   text-align: center;
 }
 
-.heading-not-found {
-  font-weight: 100;
-  text-align: center;
-  text-shadow: #4c3917 10px 10px 14px;
-}
