--- a/src/assets/scss/components/footer.scss
+++ b/src/assets/scss/components/footer.scss
@@ -49,6 +49,10 @@ footer {
     }
   }
 
+  .color-gray {
+    color: gray;
+  }
+
   @media (max-width: $mobile-max) {
     margin-bottom: 80px;
   }
