fixed website footer

--- a/src/assets/scss/components/footer.scss
+++ b/src/assets/scss/components/footer.scss
@@ -23,6 +23,7 @@ footer {
     align-items: flex-start;
     display: flex;
     margin: $l;
+    min-height: 9rem;
 
     @media (max-width: $mobile-max) {
       display: inline;
@@ -42,11 +43,16 @@ footer {
       padding: 0;
 
       @media (max-width: $mobile-max) {
+        min-width: 9rem;
         a {
           margin: 0;
         }
       }
     }
+  }
+
+  .color-gray {
+    color: gray;
   }
 
   @media (max-width: $mobile-max) {
